add cancel button styling

--- a/index.html
+++ b/index.html
@@ -29,186 +29,16 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
-            <tr>
-              <td>Author</td>
-              <td>Title</td>
-              <td>Page count</td>
-              <td>Has finished reading?</td>
-              <td>x</td>
-            </tr>
+            <td>Autdor</td>
+            <td>Title</td>
+            <td>Page count</td>
+            <td>Has finished reading?</td>
+            <td>❌</td>
           </tbody>
         </table>
       </div>
-      <button ">NEW BOOK</button>
-      <form action="" >
+      <button>NEW BOOK</button>
+      <form action="">
         <section>
           <label for="author">Author:</label>
           <input type="text" name="author" id="author" />
@@ -225,7 +55,7 @@
           <input type="checkbox" name="read-status" id="read-status" />
           <label for="read-status">is finished reading</label>
         </section>
-				<input type="submit" value="Add the book">
+        <input type="submit" value="Add the book" />
       </form>
     </main>
   </body>
