add form display on click

--- a/index.html
+++ b/index.html
@@ -29,16 +29,11 @@
             </tr>
           </thead>
           <tbody>
-            <td>Autdor</td>
-            <td>Title</td>
-            <td>Page count</td>
-            <td>Has finished reading?</td>
-            <td>❌</td>
           </tbody>
         </table>
       </div>
-      <button>NEW BOOK</button>
-      <form action="">
+      <button class="add-new-book">NEW BOOK</button>
+      <form action="" class="add-new-book">
         <section>
           <label for="author">Author:</label>
           <input type="text" name="author" id="author" />
