--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <h1>Simple library</h1>
       <div>
-        <table>
+        <table id="simple-library">
           <colgroup>
             <col />
             <col />
@@ -21,26 +21,29 @@
           </colgroup>
           <thead>
             <tr>
-              <th>Author</th>
               <th>Title</th>
+              <th>Author</th>
               <th>Page count</th>
               <th>Has finished reading?</th>
               <th>&nbsp;</th>
             </tr>
           </thead>
-          <tbody>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
       <button class="add-new-book">NEW BOOK</button>
-      <form action="" class="add-new-book">
-        <section>
-          <label for="author">Author:</label>
-          <input type="text" name="author" id="author" />
-        </section>
+      <form
+        action=""
+        class="add-new-book"
+        data-related-table-id="simple-library"
+      >
         <section>
           <label for="title">Title:</label>
           <input type="text" name="title" id="title" />
+        </section>
+        <section>
+          <label for="author">Author:</label>
+          <input type="text" name="author" id="author" />
         </section>
         <section>
           <label for="page-count">Number of pages:</label>
