--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
               <th>Page count</th>
               <th>Has finished reading?</th>
               <th>&nbsp;</th>
+              <th>&nbsp;</th>
             </tr>
           </thead>
-          <tbody></tbody>
+          <tbody>
+          </tbody>
         </table>
       </div>
       <button class="add-new-book">NEW BOOK</button>
