turn factories into classes test

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
               <th>&nbsp;</th>
             </tr>
           </thead>
-          <tbody>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
       <button class="add-new-book">NEW BOOK</button>
