--- a/src/index.html
+++ b/src/index.html
@@ -37,15 +37,15 @@
             >
                 <section>
                     <label for="title">Title:</label>
-                    <input type="text" name="title" id="title">
+                    <input type="text" name="title" id="title" required>
                 </section>
                 <section>
                     <label for="author">Author:</label>
-                    <input type="text" name="author" id="author">
+                    <input type="text" name="author" id="author" required>
                 </section>
                 <section>
                     <label for="page-count">Number of pages:</label>
-                    <input type="number" name="page-count" id="page-count">
+                    <input type="number" name="page-count" id="page-count" required>
                 </section>
                 <section>
                     <input type="checkbox" name="read-status" id="read-status">
