book pages count must be no less than 1

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,13 @@
                 </section>
                 <section>
                     <label for="page-count">Number of pages:</label>
-                    <input type="number" name="page-count" id="page-count" required>
+                    <input
+                        type="number"
+                        name="page-count"
+                        id="page-count"
+                        min="1"
+                        required
+                    >
                 </section>
                 <section>
                     <input type="checkbox" name="read-status" id="read-status">
