--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,23 @@
         <title>Simple library</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="Library App">
+        <meta property="og:type" content="website">
+        <meta
+            property="og:description"
+            content="Track your book collection with this simple app"
+        >
+
+        <meta property="og:url" content="https://oddto.github.io/Library/">
+        <meta property="og:image" content="./assets/page_preview.png">
+        <meta property="og:image:secure_url" content="./assets/page_preview.png">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+        <meta
+            property="og:image:alt"
+            content="Library App - Track your book collection with this simple app"
+        >
     </head>
     <body>
         <main>
